package de.dhbw.game;

public interface IMoneyListener {
    public void performMoneyUpdate(int money);
}
